# wheebbot_packages

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
wheebbot_arduino/: CMakeLists.txt  README.md  package.xml
wheebbot_arduino/WheBBot_proto_scripts/main/main_fast/: main_fast.ino
wheebbot_arduino/WheBBot_proto_scripts/main/main_faster/: main_faster.ino
wheebbot_arduino/WheBBot_proto_scripts/main/main_v2/: main_v2.ino
wheebbot_arduino/src/microcontroller_mains/: README.md
wheebbot_arduino/src/microcontroller_mains/main/: main.ino
wheebbot_arduino/src/test_scripts/: BNO055_ref_frame.md  README.md
wheebbot_arduino/src/test_scripts/CAN_bus/test_CAN_33click/: test_CAN_33click.ino
wheebbot_arduino/src/test_scripts/IMU_data_over_CAN_test/: IMU_data_over_CAN_test.ino
wheebbot_arduino/src/test_scripts/gyroBNO085vs055/: gyroBNO085vs055.ino
wheebbot_arduino/src/test_scripts/lin_accBNO085vs055/: lin_accBNO085vs055.ino
wheebbot_arduino/src/test_scripts/test_BNO055/: test_BNO055.ino
wheebbot_arduino/src/used_libraries/Seeed_Arduino_CAN-master/src/: mcp2515_can_dfs.h  mcp_can.h
wheebbot_arduino/test_scripts/gravBNO085vs055/: gravBNO085vs055.ino
wheebbot_arduino/test_scripts/main_test2/: main_test2.ino
wheebbot_arduino/test_scripts/test_SensorFusion_BLE33/: test_SensorFusion_BLE33.ino
wheebbot_arduino/used_libraries/: README.md
wheebbot_arduino/used_libraries/Seeed_Arduino_CAN-master/src/: mcp2515_can.cpp
wheebbot_cntrl/: CMakeLists.txt  package.xml
wheebbot_description/: CMakeLists.txt  package.xml
wheebbot_description/config/: urdf_params.yaml
wheebbot_description/config/rviz/: wheebbot.rviz
wheebbot_description/launch/: rviz_standalone_gazebo.launch.py  rviz_standalone_ign.launch.py  test_urdf_rviz2.launch.py
wheebbot_description/meshes/: full_no_knee_no_wheels.mtl  wheel_full.mtl
wheebbot_description/sdf/: database.config
wheebbot_description/sdf/WheeBBot_sdf/: README.md  generate_sdf_from_erb.sh  model.config  model.sdf  model.sdf.erb
wheebbot_description/sdf/my_camera/: model.config  model.sdf
wheebbot_description/sdf/my_custom_ground_plane/: model.config  model.sdf
wheebbot_description/sdf/my_custom_ground_plane/materials/scripts/: test_texture.material
wheebbot_description/sdf/my_custom_ground_plane_ign/: model.config  model.sdf
wheebbot_description/sdf/my_custom_ground_plane_ign/materials/scripts/: test_texture.material
wheebbot_description/urdf/: gazebo_spec_tags.xacro  generate_urdf_from_xacro_gazebo.sh  generate_urdfs.sh  ign_spec_tags.xacro  macros.urdf.xacro  materials.urdf.xacro  parameters.urdf.xacro  wheebbot.gazebo.xacro  wheebbot.urdf  wheebbot.urdf.xacro  wheebbot_full.urdf.xacro  wheebbot_ign.urdf.xacro
wheebbot_gazebo/: CMakeLists.txt  package.xml
wheebbot_gazebo/config/: ign_gui.config
wheebbot_gazebo/launch/: gzclient.launch.py  gzserver.launch.py  odrv_axes_USBconfigurator.launch.py  spawn_entity_gazebo.launch.py  spawn_entity_ign.launch.py  standalone_gazebo.launch.py  standalone_ign.launch.py  test_urdf_rviz2.launch.py  wheebbot.launch.py  wheebbot_gazebo.launch.py  wheebbot_ign.launch.py
wheebbot_gazebo/worlds/: wheebbot.world  wheebbot_ign.world
wheebbot_horizon/: CMakeLists.txt  package.xml
wheebbot_horizon/config/: test_balancing_mpc.yaml
wheebbot_horizon/src/: test_balancing_mpc.py
wheebbot_horizon/src/balancing_utils/: balancing_mpc.py
wheebbot_horizon/wheebbot_horizon/: rviz_traj_replayer.py  test_balancing_mpc.py
wheebbot_horizon/wheebbot_horizon/balancing_utils/: balancing_mpc.py
wheebbot_horizon/wheebbot_horizon/ros2_utils/: replay_trajectory.py
wheebbot_odrive/: CMakeLists.txt  package.xml
wheebbot_odrive/config/: ODrive.yaml  ODrive_config.md  actuators.yaml  odrive-cansimple.dbc
wheebbot_odrive/firmware/: odrive-interface.yaml  tup.config  tup.config.default
wheebbot_odrive/firmware/.tup/: db
wheebbot_odrive/firmware/MotorControl/: axis.hpp
wheebbot_odrive/firmware/communication/can/: can_simple.cpp
wheebbot_odrive/src/: create_can_dbc.py  odrv_axes_USBconfigurator.py  sinusoid_dbc_test.py  steps_dbc_test.py
wheebbot_odrive/src/install/: local_setup.sh  setup.sh
wheebbot_odrive/src/log/: latest_build
wheebbot_os/: CMakeLists.txt  package.xml
wheebbot_os/docs/: RPI_setup.md
wheebbot_os/kernels/kernels/: install_kernel.bash
wheebbot_os/src/: setup_RPI.bash
wheebbot_state_estimation/: CMakeLists.txt  package.xml
wheebbot_state_estimation/config/: imu_can.dbc  odrive_cansimple.dbc
wheebbot_state_estimation/src/: can0_logger.sh  can1_logger.sh  generate_imu_can_c_source.sh  generate_odrive_can_c_source.sh  generate_wheebbot_imu_can_dbc.py  generate_wheebbot_odrive_can_dbc.py  imu_can_test.py  odrive_can_axis_state_test.py  odrive_cansimple.c  odrive_cansimple.h  wheebbot_imu_can.c  wheebbot_imu_can.h
wheebbot_utils/: CMakeLists.txt  package.xml
