<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>

<package format="3"> <!-- ROS2 uses format 3-->

  <!--############## GENERAL INFO ################  -->

  <!-- required tags -->
  <name>wheebbot_state_estimation</name>
  <version>0.0.1</version>
  <description>Files used for acquiring/manipulating the state of the WheeBBot robot</description>
  <maintainer email="andrepatrizi1b6e6@gmail.com">andreap</maintainer>
  <license>BSD</license>
  <!-- optional -->
  <url type="repository"> https://github.com/AndPatr/WheeBBot-v1 </url>   
  <author email="andrepatrizi1b6e6@gmail.com"> Andrea Patrizi </author>

  <!--############# DEPENDENCIES ################  -->

  <!-- build tool dep -->
  <buildtool_depend>ament_cmake</buildtool_depend> <!--c++ code-->
  <buildtool_depend>ament_cmake_python</buildtool_depend> <!-- python code; cmake_python allows the use of CMakerLists also for python. 
  Alternatively, ament_python can be used -->

  <!-- standard dep -->
  <depend>rclcpp</depend>  <!-- ROS2 Cpp library -->
  <depend>rclpy</depend> <!-- ROS2 Python library -->

  <!-- export -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
